--- a/src/components/StoreExterior.astro
+++ b/src/components/StoreExterior.astro
@@ -1,4 +1,7 @@
+<h1>Welcome to the Store! CLICK GREY RECTANGLE TO CONTINUE</h1>
 <div class="store-exterior">
+
+
   <svg class="konbini" viewBox="0 0 375 376" width="300" xmlns="http://www.w3.org/2000/svg">
     <rect width="375" height="376" fill="#E54444" />
     <rect class="door" x="133" y="193" width="89" height="183" fill="#D9D9D9" id="enter-door" />
@@ -7,6 +10,7 @@
 
 
 <style>
+h1 {color: black; text-align: center; margin-top: 2rem; font-family: 'Arial', sans-serif;}
 .store-exterior {
     display: flex;
     justify-content: center;
